<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/homePageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/home_page"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePageName">

        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo_large" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20"
        app:layout_constraintBottom_toTopOf="@+id/navBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_layout">

        <TableRow
            android:id="@+id/cards_row_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/search_cardview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="goToSearch"
                android:paddingHorizontal="2dp"
                app:cardCornerRadius="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background_1">

                    <ImageView
                        android:id="@+id/search_imageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:scaleType="centerInside"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:visibility="visible"
                        app:layout_constraintBottom_toTopOf="@+id/search_card_textview"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/search_icon" />

                    <TextView
                        android:id="@+id/search_card_textview"
                        style="@style/TextAppearance.InsideTheScore.DisplaySmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="8dp"
                        android:gravity="center"
                        android:text="@string/search_card_title"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/library_cardview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="goToLibrary"
                app:cardCornerRadius="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/MusicObjectSelectionButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background_2">

                    <ImageView
                        android:id="@+id/lists_imageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:scaleType="centerInside"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        app:layout_constraintBottom_toTopOf="@+id/lists_card_textview"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/list_solid" />

                    <TextView
                        android:id="@+id/lists_card_textview"
                        style="@style/TextAppearance.InsideTheScore.DisplaySmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="8dp"
                        android:gravity="center"
                        android:text="@string/library_card_title"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:id="@+id/cards_row_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/favorites_cardview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="goToFavorites"
                android:paddingHorizontal="2dp"
                app:cardCornerRadius="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/MusicObjectSelectionButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background_3">

                    <ImageView
                        android:id="@+id/favorites_imageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:scaleType="centerInside"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        app:layout_constraintBottom_toTopOf="@+id/favorites_card_textview"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/heart" />

                    <TextView
                        android:id="@+id/favorites_card_textview"
                        style="@style/TextAppearance.InsideTheScore.DisplaySmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="8dp"
                        android:gravity="center"
                        android:text="@string/favorites_card_title"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/settings_cardview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="goToSettings"
                app:cardCornerRadius="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/MusicObjectSelectionButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background_4">

                    <ImageView
                        android:id="@+id/settings_imageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:scaleType="centerInside"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        app:layout_constraintBottom_toTopOf="@+id/settings_card_textview"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/settings_icon" />

                    <TextView
                        android:id="@+id/settings_card_textview"
                        style="@style/TextAppearance.InsideTheScore.DisplaySmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="8dp"
                        android:gravity="center"
                        android:text="@string/settings_card_title"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

    </TableLayout>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navBar"
        android:name="com.example.insidethescore.NavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout="@layout/fragment_navigation_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>